sostenibilidad y arreglo de tablas HTML

--- a/LenguajeDeMarcas/2Trimestre/JavierManzanoOliveros_42/index.html
+++ b/LenguajeDeMarcas/2Trimestre/JavierManzanoOliveros_42/index.html
@@ -20,7 +20,7 @@
             <td rowspan="3">para probar</td>
             <td>varias</td>
             <td></td>
-            <td>de las</td>
+            <td class="estaSeMueve">de las</td>
         </tr>
         <tr>
             <td>propiedades</td>
