--- a/LenguajeDeMarcas/2Trimestre/JavierManzanoOliveros_48/index.html
+++ b/LenguajeDeMarcas/2Trimestre/JavierManzanoOliveros_48/index.html
@@ -21,47 +21,49 @@
 
     <h1>Propiedad position: relative</h1>
 
-    <div class="relative-element">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus necessitatibus quidem ex totam. Cupiditate,
-            fugit labore magni libero impedit sapiente at repudiandae quaerat adipisci illum. Minus esse voluptates impedit
-            earum. </p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae aut necessitatibus porro expedita
-            recusandae, commodi, a fugiat facilis placeat sint nam? Odit magnam adipisci consequuntur, velit eos fugit!
-            Eligendi, assumenda?</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam, aliquid nostrum laboriosam maxime, neque quam
-            iusto odit commodi tenetur praesentium est nulla earum eveniet repudiandae eum iste, magni sit cupiditate! </p>
-    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus necessitatibus quidem ex totam. Cupiditate,
+        fugit labore magni libero impedit sapiente at repudiandae quaerat adipisci illum. Minus esse voluptates impedit
+        earum. </p>
+    <p class="relative">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae aut necessitatibus porro expedita
+        recusandae, commodi, a fugiat facilis placeat sint nam? Odit magnam adipisci consequuntur, velit eos fugit!
+        Eligendi, assumenda?</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam, aliquid nostrum laboriosam maxime, neque quam
+        iusto odit commodi tenetur praesentium est nulla earum eveniet repudiandae eum iste, magni sit cupiditate! </p>
 
     <h1>Propiedad position: fixed</h1>
 
     <p>Este párrafo es normal</p>
-    <div class="fixed-element">
+    <div class="fixed">
         <p>Este es el elemento con position:fixed</p>
     </div>
     <p>Este párrafo es normal </p>
 
     <h1>Propiedad position: absolute</h1>
-    <div class="relative-element">
-        <p>Contenedor con position: relative</p>
-        <p>Contenedor con position: relative</p>
-        <p>Contenedor con position: relative</p>
-        <p>Contenedor con position: relative</p>
-        <p>Contenedor con position: relative</p>
-        <p>Contenedor con position: relative</p>
-        <p>Contenedor con position: relative</p>
-        <p>Contenedor con position: relative</p>
-        <p>Contenedor con position: relative</p>
-        <p>Contenedor con position: relative</p>
-        <p>Contenedor con position: relative</p>
-        <p>Contenedor con position: relative</p>
-        <p>Contenedor con position: relative</p>
-        <p>Contenedor con position: relative</p>
-        <p>Contenedor con position: relative</p>
-
-        <div class="absolute-element">
-            <p>Contenedor con position:absolute</p>
+    <div>
+        <div class="relative">
+            <p>Contenedor con position: relative</p>
+            <p>Contenedor con position: relative</p>
+            <p>Contenedor con position: relative</p>
+            <p>Contenedor con position: relative</p>
+            <p>Contenedor con position: relative</p>
+            <p>Contenedor con position: relative</p>
+            <p>Contenedor con position: relative</p>
+            <p>Contenedor con position: relative</p>
+            <p>Contenedor con position: relative</p>
+            <p>Contenedor con position: relative</p>
+            <p>Contenedor con position: relative</p>
+            <p>Contenedor con position: relative</p>
+            <p>Contenedor con position: relative</p>
+            <p>Contenedor con position: relative</p>
+            <p>Contenedor con position: relative</p>
+    
+            <div class="absolute">
+                <p>Contenedor con position:absolute</p>
+            </div>
         </div>
     </div>
-</body>
 
-</html>
+    <div>
+
+    </div>
+</body>
